src/app/listings.scss
@import "variables.scss";

#container-listings {
  // background-image: url(../images/listings/background.png);
  // opacity: .1;
  // background-color: lightgray;
  .content {
    max-width: 1800px;
    margin: 0 auto;
  }

  .ham-menu {
    position: fixed;
    display: block;
    top: -14px;
    right: -1px;
  }

  .header {
    margin-top: 100px;
    text-align: center;
    > h4 {
      font-size: 3em;
      margin-bottom: 20px;
      color: #514d4c;
    }
    > p {
      font-size: 1.8em;
      margin: 0 15% 0 15%;
      opacity: .95;
      color: gray;
    }
    > input {
      margin-top: 40px;
      border-radius: 30px;
      width: 420px;
      height: 50px;
    }
  }

  .submenu {
    margin-top: 15px;
    color: grey;
    font-size: .8em;
    .plus-sign {
      margin-right: 8px;
    }
  }

  .plus-sign {
    border-color: lightgrey;
    color: lightgrey;
    border-style: solid;
    border-width: thin;
    height:20px;
    width: 20px;
    display: inline-block;
  }

  .listings {
    margin-top: 63px;
  }

  .listing-preview {
    width: 350px;
    margin-right: 15px;
    margin-bottom: 34px;
    color: gray;
    border: solid;
    border-width: thin;
    border-color: lightgray;
    .header {
      background-image: url(../images/carousel/prop2-header.jpg);
      background-size: cover;
      height: 235px;
      margin: 0;
      position: relative;
      .label {
        position: absolute;
        top: 8px;
        left: -6px;
        background-color: $primary-color;
        color: white;
        padding: 3px;
        font-size: 1em;
      }
      .lease {
        background-color: $brand-blue;
      }
      .address {
        position: absolute;
        left: 14px;
        bottom: 14px;
        color: white;
        text-align: left;
        padding: 0 0 12px 12px;
        font-size: 1.2em;
      }
    }
    .content {
      font-size: 1.1em;
      line-height: 135%;
      padding-left: 27px;
      padding-right: 27px;
      padding-bottom: 10px;
    }
    .footer {
      border-top: solid;
      border-width: thin;
      border-color: lightgray;
      opacity: .9;
      padding: 18px;
    }
  }

  .amenities {
    > p {
      display: inline-block;
      width: 49%;
    }
  }

  ::-webkit-input-placeholder {
    color: $listings-text;
    font-size:1.1em;
    font-family: $font-brand;
    line-height: 110%;
  }

  .paginator {
    text-align: center;
    position: relative;
    font-size: 1.4em;
    color: lightgray;
    margin: 20px 0 25px 0;
    > div {
      display: inline-block;
      padding: 12px;
    }
    .pages {
      > a {
        padding: 12px;
        text-decoration: none;
      }
    }
   .navigate {
     color: $primary-color;
   }
  }
}

@media screen and (max-width: $breakpoint-small) {
  #container-listings {
    .listing-preview {
      width: 92%;
    }
    .header {
      > p {
        margin: 1px;
      }
      > input {
        width: 94%;
      }
    }
  }
}
/**
 *  Do not remove the comment below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

